unpackaged/main/default/objects/FSL_Integration_User__c/FSL_Integration_User__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Integration user</description>
    <label>FSL Integration User</label>
</CustomObject>