unpackaged/main/default/objects/FSL_Integration_User__c/fields/isSandbox__c.field-meta.xml
<CustomField>
    <fullName>isSandbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sandbox?</label>
    <type>Checkbox</type>
</CustomField>