unpackaged/main/default/objects/FSL_Integration_User__c/fields/Sandbox_Email__c.field-meta.xml
<CustomField>
    <fullName>Sandbox_Email__c</fullName>
    <label>Sandbox Email</label>
    <type>Email</type>
</CustomField>