unpackaged/main/default/objects/FSL_Integration_User__c/fields/Sandbox_Phone__c.field-meta.xml
<CustomField>
    <fullName>Sandbox_Phone__c</fullName>
    <label>Sandbox Phone</label>
    <type>Phone</type>
</CustomField>